# LLMCompiler-Pro

./: .env.sample  .gitignore  LICENSE  Makefile  README.md  __init__.py  docker-compose.yaml  main.py  pyproject.toml
.chainlit/: config.toml
.conf/: .pre-commit.yaml  autoflake.cfg  flake8.cfg  ruff.toml
.github/workflows/: main.yml
gui_demo/: starter.py
llmcompiler_pro/infra/: openai.py
llmcompiler_pro/infra/elastic_search/: elastic_search_interface.py  hybrid_search.py  hybrid_search_for_prerequisite.py
llmcompiler_pro/llmcompiler_pro/: callbacks.py  constants.py  llmcompiler_pro.py  output_parser.py  plan_and_fetch.py
llmcompiler_pro/llmcompiler_pro/final_answer/: generate.py
llmcompiler_pro/llmcompiler_pro/planner/: callback_handler.py  generate.py  planner.py
llmcompiler_pro/llmcompiler_pro/task_fetch/: __init__.py  apis.py  fetch.py  generate_subtasks.py  sub_task.py  task.py  task_fetching_unit.py  utils.py
llmcompiler_pro/prompt/llmcompiler_pro/: code_generator_system_prompt.jinja2  code_generator_user_prompt.jinja2  code_interpreter_assistant_prompt.jinja2  code_interpreter_user_prompt.jinja2  deprecated_planner_few_shot.jinja2  fallback_tool_system_prompt.jinja2  few_shot_of_final_answer.jinja2  subtask.py  (+10 more)
llmcompiler_pro/prompt_render/: jinja2_render.py  prompt_render_interface.py
llmcompiler_pro/schema/: common.py  retrieval.py  tool_calls.py
llmcompiler_pro/streaming_handlers/: chainlit_browsing_tool_updater.py  chainlit_updater.py
llmcompiler_pro/tools/: __init__.py  find.py  tool_interface.py
llmcompiler_pro/utils/: batch.py
(+20 files in other folders)
